@@ -1,16 +1,1 @@
-.stripe-gateway-checkout-email-field {
-	position: relative;
-}
-
-.stripe-gateway-checkout-email-field button.stripe-gateway-stripelink-modal-trigger {
-	display: none;
-	position: absolute;
-	right: 5px;
-	width: 64px;
-	height: 40px;
-	background: no-repeat
-		url( '../../client/payment-method-icons/link/icon.svg' );
-	background-color: transparent !important;
-	cursor: pointer;
-	border: none;
-}
+.stripe-gateway-checkout-email-field{position:relative}.stripe-gateway-checkout-email-field button.stripe-gateway-stripelink-modal-trigger{display:none;position:absolute;right:5px;width:64px;height:40px;background:no-repeat url('../images/link.svg');background-color:transparent;cursor:pointer;border:none}
